--- a/content/Task2.html
+++ b/content/Task2.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='Task2.html'>Task2</a></li></li></ul></ul><li><a href='Problems&Discussion.html'>Problems&Discussion</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='Task1.html'>Task1</a><li><a href='Task2.html'>Task2</a></li></li></ul></ul><li><a href='Problems&Discussion.html'>Problems&Discussion</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion<br /><h1>Task2</h1>
+    <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion<br /><h1>Task2</h1>
 <p><span>參考老師提供的bubbleRob_remoteAPI.ttt 檔案</span></p>
 <p><span><img alt="" height="430" src="./../images/task 1.png" width="800"/></span></p>
 <p><span>在自己Stage成品裡的Base裡新增程式</span></p>
@@ -144,7 +144,8 @@ img.add_border {
 <p><img alt="" height="473" src="./../images/task 4.png" width="800"/></p>
 <p><span>完成操作影片：</span></p>
 <p><span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPhdoOz42Mk" title="YouTube video player" width="560"></iframe></p><br />Task << <a href='Task.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPhdoOz42Mk" title="YouTube video player" width="560"></iframe></p>
+<br />Task1 << <a href='Task1.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion</div>
         
     <!-- footer -->
       <div class="container">
