--- a/content/W14-15.html
+++ b/content/W14-15.html
@@ -138,7 +138,9 @@ img.add_border {
 <p>由於先前的六腳獸行走即戰力還是不夠穩定，所以我們又修正了主體的設計，修正設計圖如下:</p>
 <p><img alt="" height="219" src="./../images/八腳獸.jpg" width="334"/><img alt="" height="201" src="./../images/八腳獸2.jpg" width="337"/></p>
 <p>模擬主體裝上鍵盤控制系統 : </p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/tmODY4ggWHU" title="YouTube video player" width="560"></iframe></p><br />W12-13 << <a href='W12-13.html'>Previous</a> <a href='W16-17.html'>Next</a> >> W16-17</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/tmODY4ggWHU" title="YouTube video player" width="560"></iframe></p>
+<p>修正walking-test : </p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BzPRFuXtdZU" title="YouTube video player" width="560"></iframe></p><br />W12-13 << <a href='W12-13.html'>Previous</a> <a href='W16-17.html'>Next</a> >> W16-17</div>
         
     <!-- footer -->
       <div class="container">
